WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
186367
Display links are sometimes not notifying WebCore when fired.
https://bugs.webkit.org/show_bug.cgi?id=186367
Summary
Display links are sometimes not notifying WebCore when fired.
Per Arne Vollan
Reported
2018-06-06 15:51:34 PDT
This can lead to display links not being destroyed, causing performance problems.
Attachments
Patch
(2.30 KB, patch)
2018-06-06 16:27 PDT
,
Per Arne Vollan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Per Arne Vollan
Comment 1
2018-06-06 16:26:59 PDT
<
rdar://problem/40439109
>
Per Arne Vollan
Comment 2
2018-06-06 16:27:39 PDT
Created
attachment 342092
[details]
Patch
Brent Fulgham
Comment 3
2018-06-06 16:46:57 PDT
Comment on
attachment 342092
[details]
Patch This looks reasonable. It makes sense to only fire the display link for active monitors.
Per Arne Vollan
Comment 4
2018-06-06 17:10:24 PDT
Comment on
attachment 342092
[details]
Patch Thanks for reviewing!
WebKit Commit Bot
Comment 5
2018-06-06 17:37:53 PDT
Comment on
attachment 342092
[details]
Patch Clearing flags on attachment: 342092 Committed
r232563
: <
https://trac.webkit.org/changeset/232563
>
WebKit Commit Bot
Comment 6
2018-06-06 17:37:54 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug